fixed spacing issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,7 +89,7 @@ h1 {
   width: fit-content;
   text-align: center;
   position: absolute;
-  top: 93%;
+  top: 87%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
@@ -427,7 +427,7 @@ a {
     height: 350px;
   }
   #countdown {
-    margin: 25% 0% 5% 0%;
+    margin: 5% 0% 10% 0%;
     clear: both;
   } 
   .d-block2 {
@@ -443,8 +443,7 @@ a {
   }
 
   #countdown {
-    margin: 15% 0% 5% 0%;
+    margin: 5% 0% 10% 0%;
     clear: both;
   }
-
 }
